--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "ngx-mask": "^13.1.1",
     "ngx-toastr": "^14.2.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
