--- a/package.json
+++ b/package.json
@@ -24,9 +24,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@ng-bootstrap/ng-bootstrap": "^12.0.0",
     "@popperjs/core": "^2.10.2",
+    "angular-datatables": "^13.0.1",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.1.3",
+    "datatables.net": "^1.11.4",
+    "datatables.net-bs5": "^1.11.3",
+    "datatables.net-dt": "^1.11.4",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.6.0",
     "ngx-mask": "^13.1.1",
     "ngx-toastr": "^14.2.1",
     "rxjs": "~7.5.0",
@@ -37,7 +42,9 @@
     "@angular-devkit/build-angular": "~13.2.3",
     "@angular/cli": "~13.2.3",
     "@angular/compiler-cli": "~13.2.0",
+    "@types/datatables.net": "^1.10.21",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.13",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
