--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/assets/css/styles.css",
               "node_modules/ngx-toastr/toastr.css",
               "node_modules/datatables.net-bs5/css/dataTables.bootstrap5.min.css",
