--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "datatables.net-dt": "^1.11.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "ngx-bootstrap": "8.0.0",
     "ngx-mask": "^13.1.1",
     "ngx-toastr": "^14.2.1",
     "rxjs": "~7.5.0",
