--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
+    "build:dev": "ng build --watch --deploy-url /pms-ui/ --base-href /pms-ui/",
     "test": "ng test"
   },
   "private": true,
